Attempting sign-in page, didn't work out so beginning database access work on full ranking page

--- a/public/fullranking.html
+++ b/public/fullranking.html
@@ -96,7 +96,7 @@
         <a href="#walsh">Walsh</a>
       </div>
     </div>
-    <a href="#signin" style="float:right">Sign In</a>
+    <a href="./signin.html" style="float:right">Sign In</a>
   </div>
 </body>
 </html>
