--- a/public/signin.html
+++ b/public/signin.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>authTest</title>
-  <script defer type="module" src="./SignIn.js" charset="utf-8"></script>
+  <script defer type="module" src="SignIn.js" charset="utf-8"></script>
 </head>
 <style>
   .navigation{
@@ -96,7 +96,8 @@
         <a href="#walsh">Walsh</a>
       </div>
     </div>
-    <a class="active" href="#signin" style="float:right">Sign In</a>
+    <a class="active" href="./signin.html" style="float:right">Sign In</a>
   </div>
+  <input type="button" onclick=callGoogleSignIn() value="Google Sign In"/>
 </body>
 </html>
