Trying to work out the addPoints form, but getting "function not defined" error

--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
   <div class="navigation">
     <a class="active" href="./index.html">Podium</a> <!-- Home page if not signed in or if not administrator -->
     <a href="./fullranking.html">Full Ranking</a> <!-- Only signed in users can view this option -->
-    <a href="#pointrecord">Point Record</a> <!-- Only administrators (teachers/house heads) can see this option -->
+    <a href="./pointrecord.html">Point Record</a> <!-- Only administrators (teachers/house heads) can see this option -->
     <div class="dropdown"> <!-- Dropdown menu -->
       <button class="dropbutton">Houses ▼</button>
       <div class="houses"> <!-- Options -->
