Tried to implement sign-in and sign-out system (only on point record page), and cleaned up a few other things

--- a/public/fullranking.html
+++ b/public/fullranking.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Point Record</title>
-  <script defer type="module" src="./PointRecord.js" charset="utf-8"></script>
+  <script defer type="module" src="./FullRanking.js" charset="utf-8"></script>
 </head>
 <style>
   .navigation{
@@ -141,8 +141,8 @@
 <body>
   <div class="navigation">
     <a href="index.html">Podium</a> <!-- Home page if not signed in or if not administrator -->
-    <a href="fullranking.html">Full Ranking</a> <!-- Only signed in users can view this option -->
-    <a class="active" href="pointrecord.html">Point Record</a> <!-- Only administrators (teachers/house heads) can see this option -->
+    <a class="active" href="fullranking.html">Full Ranking</a> <!-- Only signed in users can view this option -->
+    <a href="pointrecord.html">Point Record</a> <!-- Only administrators (teachers/house heads) can see this option -->
     <div class="dropdown"> <!-- Dropdown menu -->
       <button class="dropbutton">Houses ▼</button>
       <div class="houses"> <!-- Options -->
