--- a/public/index.html
+++ b/public/index.html
@@ -41,21 +41,21 @@
     grid-template-rows: 50px 50px 50px 50px 400px;
   }
   .pedestal_1{
-    background-color: purple;
+    background-color: grey;
     grid-column-start: 4;
     grid-column-end: span 2;
     grid-row-start: 2;
     grid-row-end: span 4;
   }
   .pedestal_2{
-    background-color:violet;
+    background-color:darkgrey;
     grid-column-start: 2;
     grid-column-end: span 2;
     grid-row-start: 4;
     grid-row-end: span 2;
   }
   .pedestal_3{
-    background-color:violet;
+    background-color:lightgrey;
     grid-column-start: 6;
     grid-column-end: span 2;
     grid-row-start: 5;
@@ -194,9 +194,9 @@
     <div class="pedestal_2"></div>
     <div class="pedestal_1"></div>
     <div class="pedestal_3"></div>
-    <div class="text_1">Dupont</div>
-    <div class="text_2">Dupont</div>
-    <div class="text_3">Dupont</div>
+    <div class="text_1" id="first"></div>
+    <div class="text_2" id="second"></div>
+    <div class="text_3" id="third"></div>
   </div>
 </body>
 </html>
