--- a/public/pointrecord.html
+++ b/public/pointrecord.html
@@ -113,8 +113,8 @@
   	left:50%;
   	border:solid;
     border-width:3px;
-    border-color:darkviolet;
-    background-color:#ebe5fa; /* Light purple */
+    border-color:#b0a182;
+    background-color:#ccbe9f; /* Light beige */
     padding:20px;
   	padding-top:10px;
   }
@@ -136,6 +136,9 @@
     font-family:Snell Roundhand;
     background-color: #bdae8f;
     color: white;
+  }
+  .showPointsForm{
+    visibility:hidden;
   }
 </style>
 <body>
@@ -160,7 +163,8 @@
         <a href="#walsh">Walsh</a>
       </div>
     </div>
-    <a href="./signin.html" style="float:right">Sign In</a>
+    <a id="signOut" style="float:right">Sign Out</a>
+    <a id="signIn" style="float:right">Sign In</a>
   </div>
   <br>
   <div class="top">
